--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@500&family=Open+Sans:wght@300&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/54212b1443.js" crossorigin="anonymous"></script>
-    <title>我的網頁(自訂)</title>
+    <title>北投溫泉悠遊趣</title>
 
 </head>
 
@@ -40,16 +40,19 @@
                             </li>
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                聯絡我們
+                                旅遊行程
                                 </a>
                                 <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="#">最新消息</a></li>
-                                    <li><a class="dropdown-item" href="#">聯絡我們</a></li>
+                                    <li><a class="dropdown-item" href="#">藝文情境</a></li>
+                                    <li><a class="dropdown-item" href="#">山水情境</a></li>
                                     <li>
                                         <hr class="dropdown-divider">
                                     </li>
-                                    <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                    <li><a class="dropdown-item" href="#">美食系列介紹</a></li>
                                 </ul>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">聯絡我們</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link active" href="https://www.google.com/">Vue作品</a>
@@ -69,8 +72,8 @@
     <section id="intro">
         <div class="container">
             <div class="col-md-12">
-                <h1 class="display-4">北投溫泉週末遊行程</h1>
-                <p class="lead">生活悶悶的?加入我們一起出國啦!</p>
+                <h1 class="display-4 my-3">北投溫泉美食趣</h1>
+                <p class="lead">假日在家悶悶的？來北投踏青享受溫泉和美食啦！</p>
                 <a href="#">參加行程去~~</a>
                 <p></p>
             </div>
@@ -85,14 +88,14 @@
                     <!-- 跟隨導遊小何，在這個週末領略北投溫泉的美好吧! -->
                     <div class="row">
                         <div class="col-md-4 text-center">
-                            <img src="pictures/inner.png">
+                            <img src="pictures/head.jpg">
                             <h5>導遊小何</h5>
                         </div>
                         <div class="col-md-8 text-left">
-                            <p class="lead">無論你是單身一人或是一班朋友想去狂歡，只要你是Cool Guys/ Girls，都歡迎加入我們這個大家庭!</p>
-                            <p>你好!我叫小何!是這次帶領大家旅遊台灣景點的導遊。
+                            <p class="lead">無論你是獨自一人或是全家出遊，只要你喜歡漂亮的山水景色，都歡迎你追蹤本網頁！我們會時不時更新我們的行程和照片。</p>
+                            <p>你好!我是導遊小何!本次將帶領大家賞玩北投溫泉。我過去有親自走過各個景點、品嘗在地美食，好玩好吃好拍的景點美食我都有紀錄，請大家放心參考！
                             </p>
-                            <p>6666</p>
+                            <p>請大家多多指教。</p>
                         </div>
                     </div>
                 </div>
@@ -104,54 +107,54 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12 text-center">
-                    <h3>最新派對</h3>
+                    <h3>最新行程</h3>
                     <div class='row'>
                         <div class='col-md-4 text-left'>
                             <div class='outer'>
                                 <a href='#'>
                                     <div class='upper'>
-                                        <img src='pictures/spring.jpg'>
+                                        <img src='pictures/shop.png'>
                                     </div>
                                 </a>
                             </div>
                             <div class='lower'>
-                                <span>可報名</span>
-                                <h4>男：HKD380 女：HKD280</h4>
-                                <h3>狂歡派對（旅行篇） - 11月</h3>
-                                <span><i class="fas fa-map-marker-alt">香港銅鑼灣怡和街2-6號 英光大廈 7樓全層</i></span><br>
-                                <span><i class="far fa-clock"></i> Nov 03, 2018 08:00PM</span>
+                                <!-- <span>可報名</span>
+                                <h4>男：HKD380 女：HKD280</h4> -->
+                                <h3>台北溫泉季展攤</h3>
+                                <span><i class="fas fa-map-marker-alt">新北投車站舉辦的台北溫泉季活動，有不少攤販、音樂演唱的表演，及祈福活動。</i></span><br>
+                                <span><i class="far fa-clock"></i>每年10月底或11月初</span>
                             </div>
                         </div>
                         <div class='col-md-4 text-left'>
                             <div class='outer'>
                                 <a href='#'>
                                     <div class='upper'>
-                                        <img src='pictures/spring.jpg'>
+                                        <img src='pictures/foot.png'>
                                     </div>
                                 </a>
                             </div>
                             <div class='lower'>
-                                <span>可報名</span>
-                                <h4>男：HKD380 女：HKD280</h4>
-                                <h3>狂歡派對（旅行篇） - 11月</h3>
-                                <span><i class="fas fa-map-marker-alt">香港銅鑼灣怡和街2-6號 英光大廈 7樓全層</i></span><br>
-                                <span><i class="far fa-clock"></i> Nov 03, 2018 08:00PM</span>
+                                <!-- <span>可報名</span>
+                                <h4>男：HKD380 女：HKD280</h4> -->
+                                <h3>復興公園足浴池</h3>
+                                <span><i class="fas fa-map-marker-alt">在公園涼亭下的足浴池，既能欣賞綠植，又能泡湯活絡身體，不用擔心泡大眾池放不開的問題。</i></span><br>
+                                <span><i class="far fa-clock"></i> 週二至週日 上午8時至下午6點</span>
                             </div>
                         </div>
                         <div class='col-md-4 text-left'>
                             <div class='outer'>
                                 <a href='#'>
                                     <div class='upper'>
-                                        <img src='pictures/spring.jpg'>
+                                        <img src='pictures/thermal_valley.jpg'>
                                     </div>
                                 </a>
                             </div>
                             <div class='lower'>
-                                <span>可報名</span>
-                                <h4>男：HKD380 女：HKD280</h4>
-                                <h3>狂歡派對（旅行篇） - 11月</h3>
-                                <span><i class="fas fa-map-marker-alt">香港銅鑼灣怡和街2-6號 英光大廈 7樓全層</i></span><br>
-                                <span><i class="far fa-clock"></i> Nov 03, 2018 08:00PM</span>
+                                <!-- <span>可報名</span>
+                                <h4>男：HKD380 女：HKD280</h4> -->
+                                <h3>地熱谷美景</h3>
+                                <span><i class="fas fa-map-marker-alt">可欣賞白煙裊裊，環繞於泉水四周的景色。在此景色下漫步或用餐給人一種很有詩意的感覺。</i></span><br>
+                                <span><i class="far fa-clock"></i> 週二至週日 上午9時至下午5時</span>
                             </div>
                         </div>
                     </div>
@@ -164,12 +167,12 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-8 offset-md-2 text-center">
-                    <h3>加入K.O. Party的Email List</h3>
+                    <h3>加入 北投景點宣傳大使 的Email List</h3>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-8 offset-md-2 text-left">
-                    <p>讓我們有最新派對便通知你吧!</p>
+                    <p>讓我們有最新行程便通知你吧!</p>
                     <div class="input-group input-group-lg">
                         <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg" placeholder="你的電郵">
                     </div>
@@ -183,23 +186,23 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4 text-left">
-                    <img src="pictures/logo.jpg" width="85">
-                    <p>K.O. Party舉辦全港最好玩既Private派對。生活悶悶地？加入我們一齊玩啦！</p>
+                    <img src="pictures/logo.png" width="200">
+                    <p>北投景點宣傳大使 小何帶領大家暢遊北投最美景點和美食。眼睛肚子餓了嗎？加入我們一齊玩啦！</p>
                 </div>
-                <div class="col-md-4 text-left">
+                <div class="col-md-4 text-left mt-2">
                     <h4>連結</h4>
                     <ul>
                         <li><a href="index.html">主頁</a></li>
-                        <li><a href="all.html">最新派對</a></li>
+                        <li><a href="all.html">最新行程</a></li>
                     </ul>
                     <ul>
                         <li><a href="faq.html">常見問題</a></li>
                         <li><a href="contact.html">聯絡我們</a></li>
                     </ul>
                 </div>
-                <div class="col-md-4 text-left">
+                <div class="col-md-4 text-left mt-2">
                     <h4>聯絡我們</h4>
-                    <p>銅鑼灣謝斐道535號Tower 535 20樓<br> Phone: (852) 6761-3714<br> E-Mail: <a href="mailto:xxx@gmail.com">xxx@gmail.com</a></p>
+                    <p>台北市北投區大業路700號<br> Phone: (02) 2891-2972<br> E-Mail: <a href="mailto:xxx@gmail.com">xxx@gmail.com</a></p>
                 </div>
             </div>
         </div>
