--- a/journey.html
+++ b/journey.html
@@ -68,107 +68,62 @@
         </div>
     </header>
 
-    <!-- 第一段:上方的標題文字 -->
-    <section id="intro">
-        <div class="container">
-            <div class="col-md-12">
-                <h1 class="display-4 my-5 mx-1">山水怡情、明目養身，北投溫泉等你來！</h1>
-                <p class="lead">假日在家心情悶悶的？來北投踏青享受溫泉和美食啦！</p>
-                <a href="#latest" class="btn btn-primary btn-lg" role="button">參加行程</a>
-                <p></p>
-            </div>
-        </div>
-    </section>
-    <!-- 第二段:介簡 -->
-    <section id="second">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-8 offset-md-2 text-center">
-                    <h3>跟隨導遊小何，在週末享受北投溫泉吧!</h3>
-                    <div class="row">
-                        <div class="col-md-4 text-center">
-                            <img src="pictures/head.jpg">
-                            <h5>導遊小何</h5>
-                        </div>
-                        <div class="col-md-8 text-left">
-                            <p class="lead">無論你是獨自一人或是全家出遊，只要你喜歡漂亮的山水景色，都歡迎你追蹤本網頁！我們會時不時更新我們的行程和照片。</p>
-                            <p>你好!我是導遊小何!本次將帶領大家賞玩北投溫泉。我過去有親自走過各個景點、品嘗在地美食，好玩好吃好拍的景點美食我都有紀錄，請大家放心參考！
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
     <!-- 第三段:產品介紹 -->
     <section id="latest">
         <div class="container">
             <div class="row">
                 <div class="col-md-12 text-center">
-                    <h3>最新行程</h3>
-                    <div class='row'>
-                        <div class='col-md-4 text-left'>
-                            <div class='outer'>
+                    <h2 class="display-4" style="height: 100px;">藝文情境</h2>
+                    <hr style="height: 50px;">
+                    <div class='row' style="margin-bottom: 80px;">
+                        <div class='col'>
+                            <div class="col-md-3 journey-img">
                                 <a href='#'>
                                     <div class='upper'>
                                         <img src='pictures/shop.png'>
                                     </div>
                                 </a>
                             </div>
-                            <div class='lower'>
+                            <div class="col row text-start journey-text">
                                 <h3>台北溫泉季展攤</h3>
                                 <span><i class="fa-sharp fa-solid fa-tag"> 新北投車站舉辦的台北溫泉季活動，有不少攤販、音樂演唱的表演，及祈福活動。</i></span><br>
                                 <span><i class="far fa-clock"></i>每年10月底或11月初</span>
                             </div>
                         </div>
-                        <div class='col-md-4 text-left'>
-                            <div class='outer'>
+                    </div>
+                    <div class='row' style="margin-bottom: 80px;">
+                        <div class='col'>
+                            <div class="col-md-3 journey-img">
                                 <a href='#'>
                                     <div class='upper'>
-                                        <img src='pictures/foot.png'>
+                                        <img src='pictures/museum.png'>
                                     </div>
                                 </a>
                             </div>
-                            <div class='lower'>
-                                <h3>復興公園足浴池</h3>
-                                <span><i class="fa-sharp fa-solid fa-tag"> 在公園涼亭下的足浴池，既能欣賞綠植，又能泡湯活絡身體，不用擔心泡大眾池放不開的問題。</i></span><br>
-                                <span><i class="far fa-clock"></i> 週二至週日 上午8時至下午6點</span>
+                            <div class="col row text-start journey-text">
+                                <h3>凱達格蘭文物館</h3>
+                                <span><i class="fa-sharp fa-solid fa-tag"> 凱達格蘭文化館記錄了平埔族相關的歷史脈絡，以及原住民族當代藝術及文物，除了溫泉外，北投另有一番原民風情。</i></span><br>
+                                <span><i class="far fa-clock"></i>週二至週日 上午9時至下午5時</span>
                             </div>
                         </div>
-                        <div class='col-md-4 text-left'>
-                            <div class='outer'>
+                    </div>
+                    <div class='row' style="margin-bottom: 80px;">
+                        <div class='col'>
+                            <div class="col-md-3 journey-img">
                                 <a href='#'>
                                     <div class='upper'>
-                                        <img src='pictures/thermal_valley.jpg'>
+                                        <img src='pictures/garden.png'>
                                     </div>
                                 </a>
                             </div>
-                            <div class='lower'>
-                                <h3>地熱谷美景</h3>
-                                <span><i class="fa-sharp fa-solid fa-tag"> 可欣賞白煙裊裊，環繞於泉水四周的景色。在此景色下漫步或用餐給人一種很有詩意的感覺。</i></span><br>
-                                <span><i class="far fa-clock"></i> 週二至週日 上午9時至下午5時</span>
+                            <div class="col row text-start journey-text">
+                                <h3>北投梅亭</h3>
+                                <span><i class="fa-sharp fa-solid fa-tag"> 梅庭位於百年歷史的北投公園末端，擁有綠意氛圍的戶外庭院，臨北投溪順地形而建，城垛式的唭哩岸石圍牆，現今已經停採；大門門柱上「梅庭」兩字為書法家-于右任之字跡，建有閣樓及地下防空避難室，屋內曾設有溫泉浴室，顯現北投溫泉區典型的歷史特色，2006年以其建築特色與歷史保存價值被登錄列為「臺北市歷史建築」。
+                                </i></span><br>
+                                <span><i class="far fa-clock"></i>週二至週日 上午10時至下午6時</span>
                             </div>
                         </div>
                     </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- 第四段:Email -->
-    <section id="email">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-8 offset-md-2 text-center">
-                    <h3>加入 北投景點宣傳大使 的Email List</h3>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-8 offset-md-2 text-left">
-                    <p>讓我們有最新行程便通知你吧!</p>
-                    <div class="input-group input-group-lg">
-                        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg" placeholder="你的電郵">
-                    </div>
-                    <a href="#" class="btn btn-primary btn-lg" role="button">提交</a>
                 </div>
             </div>
         </div>
