--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@
                                 旅遊行程
                                 </a>
                                 <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="#">藝文情境</a></li>
+                                    <li><a class="dropdown-item" href="./journey.html">藝文情境</a></li>
                                     <li><a class="dropdown-item" href="#">山水情境</a></li>
                                     <li>
                                         <hr class="dropdown-divider">
